--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,15 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+
+.ipynb_checkpoints/
+answer/*
+answer2/*
+log/*
+result/*
+training_checkpoints/*
+20191017_HW2.pdf/*
+*.png
+*.ipynb
+debug.log
